# RUSTIC

./: Cargo.toml  database.sql
src/: config.rs  db.rs  handler.rs  main.rs  models.rs
